src/snapshots/latex_expr_parser__parser__tests__input1.snap
---
source: src/parser.rs
expression: ast
---
ASTNode {
    start: 0,
    end: 8,
    type: BinaryOpNode {
        op: Plus,
        left: ASTNode {
            start: 0,
            end: 4,
            type: BinaryOpNode {
                op: Plus,
                left: ASTNode {
                    start: 0,
                    end: 0,
                    type: Identifier {
                        name: "a",
                    },
                },
                right: ASTNode {
                    start: 4,
                    end: 4,
                    type: Identifier {
                        name: "b",
                    },
                },
            },
        },
        right: ASTNode {
            start: 8,
            end: 8,
            type: Identifier {
                name: "c",
            },
        },
    },
}
