src/snapshots/latex_expr_parser__parser__tests__input10.snap
---
source: src/parser.rs
expression: ast
---
BinaryOpNode {
    op: Wedge,
    left: UnaryOpNode {
        op: Minus,
        operand: Identifier {
            name: "ia",
        },
    },
    right: Identifier {
        name: "b",
    },
}
