src/snapshots/latex_expr_parser__parser__tests__input12.snap
---
source: src/parser.rs
expression: ast
---
ASTNode {
    start: 0,
    end: 6,
    type: BinaryOpNode {
        op: Plus,
        left: ASTNode {
            start: 0,
            end: 1,
            type: BinaryOpNode {
                op: Multiply,
                left: ASTNode {
                    start: 0,
                    end: 0,
                    type: Int {
                        value: 2,
                    },
                },
                right: ASTNode {
                    start: 1,
                    end: 1,
                    type: Identifier {
                        name: "a",
                    },
                },
            },
        },
        right: ASTNode {
            start: 5,
            end: 6,
            type: BinaryOpNode {
                op: Multiply,
                left: ASTNode {
                    start: 5,
                    end: 5,
                    type: Identifier {
                        name: "a",
                    },
                },
                right: ASTNode {
                    start: 6,
                    end: 6,
                    type: Int {
                        value: 2,
                    },
                },
            },
        },
    },
}
