src/snapshots/latex_expr_parser__parser__tests__input5.snap
---
source: src/parser.rs
expression: ast
---
ASTNode {
    start: 0,
    end: 5,
    kind: UnaryOpNode {
        op: Hat,
        operand: ASTNode {
            start: 5,
            end: 5,
            kind: Identifier {
                name: "a",
            },
        },
    },
}
