src/snapshots/latex_expr_parser__parser__tests__input6.snap
---
source: src/parser.rs
expression: ast
---
ASTNode {
    start: 0,
    end: 4,
    kind: BinaryOpNode {
        op: Carrot,
        left: ASTNode {
            start: 0,
            end: 2,
            kind: BinaryOpNode {
                op: Underscore,
                left: ASTNode {
                    start: 0,
                    end: 0,
                    kind: Identifier {
                        name: "a",
                    },
                },
                right: ASTNode {
                    start: 2,
                    end: 2,
                    kind: Identifier {
                        name: "1",
                    },
                },
            },
        },
        right: ASTNode {
            start: 4,
            end: 4,
            kind: Identifier {
                name: "2",
            },
        },
    },
}
