src/snapshots/latex_expr_parser__parser__tests__input7.snap
---
source: src/parser.rs
expression: ast
---
BinaryOpNode {
    op: Plus,
    left: Identifier {
        name: "c",
    },
    right: BinaryOpNode {
        op: Multiply,
        left: Int {
            value: 2,
        },
        right: BinaryOpNode {
            op: Plus,
            left: Identifier {
                name: "a",
            },
            right: Identifier {
                name: "b",
            },
        },
    },
}
