src/snapshots/latex_expr_parser__parser__tests__input9.snap
---
source: src/parser.rs
expression: ast
---
ASTNode {
    start: 0,
    end: 14,
    type: BinaryOpNode {
        op: Multiply,
        left: ASTNode {
            start: 0,
            end: 0,
            type: Int {
                value: 2,
            },
        },
        right: ASTNode {
            start: 1,
            end: 14,
            type: BinaryOpNode {
                op: Carrot,
                left: ASTNode {
                    start: 1,
                    end: 12,
                    type: BinaryOpNode {
                        op: Wedge,
                        left: ASTNode {
                            start: 2,
                            end: 2,
                            type: Identifier {
                                name: "a",
                            },
                        },
                        right: ASTNode {
                            start: 11,
                            end: 11,
                            type: Identifier {
                                name: "b",
                            },
                        },
                    },
                },
                right: ASTNode {
                    start: 14,
                    end: 14,
                    type: Identifier {
                        name: "3",
                    },
                },
            },
        },
    },
}
